# music-downloader

./: .cache  .gitignore  .gitmodules  AGENTS.md  README.md  mdl-config-example.toml  mdl.spec  music-download.py  music-downloader.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  copilot-references.md
.github/workflows/: backend-ci.yml  backend-deploy.yml
Documentation/: __init__.py  code-references.md
Documentation/Posts/: 2025-04-26-adding-pipx-support.md  2025-04-26-initial-setup-and-script.md  2025-04-26-streamrip-api-update.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  errors.py  main.py  schemas.py  security.py  spotify_links.py  spotify_service.py
deploy/: README.md  bootstrap-vps.sh
deploy/nginx/: spotify-auth-backend.conf
deploy/systemd/: spotify-auth-backend.service
music_downloader.egg-info/: SOURCES.txt
scripts/: regen-example-config.py  streamrip-overrides.sh
src/: __init__.py  config.py  core.py  downloader.py  gui.py  schema.py  spotify.py
src/music_downloader.egg-info/: PKG-INFO  entry_points.txt  requires.txt
streamrip/streamrip/: downloads.db
tests/: conftest.py  test_auto_repair.py  test_config_setup.py  test_schema_drift.py  test_set_arl.py  test_spotify.py  test_streamrip_integration.py
tests/snapshots/: default_mdl_config.toml
