[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {}

[project]
name = "music-downloader"
version = "1.0"
description = "A Python CLI tool for downloading music from Deezer (with Qobuz fallback) based on search queries or Spotify links/URIs"
readme = "README.md"
requires-python = "<4.0,>=3.10"
license = "MIT"  # Use license field instead of classifier
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamrip",
    "spotipy",
    "tomlkit",
    "appdirs",
    "PyQt6",
]

[project.scripts]
music-downloader = "src.downloader:main"
mdl = "src.downloader:main"
mdl-gui = "src.downloader:main_gui"