[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {}

[project]
name = "music-downloader"
version = "1.0"
description = "A Python CLI tool for downloading music from Deezer (with Qobuz fallback) based on search queries or Spotify links/URIs"
readme = "README.md"
requires-python = "<4.0,>=3.10"
license = "MIT"  # Use license field instead of classifier
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ["*.toml", "*.json"]

[project.scripts]
music-downloader = "src.downloader:main"
mdl = "src.downloader:main"
mdl-gui = "src.downloader:main_gui"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
