[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages]
find = {}

[project]
name = "spotify-auth-backend"
version = "0.1.0"
description = "FastAPI backend for resolving Spotify links into normalized track metadata"
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi",
    "spotipy",
    "uvicorn",
]
